--- a/src/components/stateless/specific/pages/CreateStatements/CreateStatements.scss
+++ b/src/components/stateless/specific/pages/CreateStatements/CreateStatements.scss
@@ -27,39 +27,25 @@
   margin-bottom: 20px;
 }
 
-:local(.row) {
-  width: 70%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 10px 0;
-}
-
-:local(.link) {
-  cursor: pointer;
-}
-
-:local(.label) {
-  @include font();
-  font-size: 16px;
-  margin-bottom: 10px !important;
-}
-
-:local(.section) {
-  @include font();
-  font-size: 16px;
-  font-weight: 100;
-}
-
-:local(.selector) {
-  color: rgba(0, 44, 135, 1);
-  border-radius: 2px;
-  border: 1px solid rgba(0, 44, 135, 0.29);
-  width: 127px;
+:local(.uploadFileWrapper) {
+  @include button(#002C87, #ffffff, 40px);
+  @include button-border(#002c87, 1px);
+  position: relative;
+  display: inline-flex;
+  width: 200px;
   height: 40px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-:local(.qualityStandard) {
-  width: 420px;
-  margin-bottom: 20px;
+:local(.uploadFile) {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
 }
